--- a/src/app/components/articles/creature-article-update/creature-article-update.component.html
+++ b/src/app/components/articles/creature-article-update/creature-article-update.component.html
@@ -2,14 +2,14 @@
     <article class="mb-5">
         <!-- Heading -->
         <div *ngIf="formState===constants.updateState && model; else createState">
-            <app-edit-toggle [isInUpdateState]=true [link]="constants.getRoutePath(router, 'creature', {name: model.name})"></app-edit-toggle>
+            <app-edit-toggle [isInUpdateState]=true [link]="routingService.getRoutePath('creature', {name: model.name})"></app-edit-toggle>
 
             <h2 class="text-center">
                 Updating Creature {{ model.name }}
             </h2>
         </div>
         <ng-template #createState>
-            <app-edit-toggle [isInUpdateState]=true [link]="constants.getRoutePath(router, 'creature-overview')"></app-edit-toggle>
+            <app-edit-toggle [isInUpdateState]=true [link]="routingService.getRoutePath('creature-overview')"></app-edit-toggle>
 
             <h2 class="text-center">
                 Adding a new Creature
