--- a/src/app/components/articles/diaryentry-article-update/diaryentry-article-update.component.html
+++ b/src/app/components/articles/diaryentry-article-update/diaryentry-article-update.component.html
@@ -10,7 +10,7 @@
         </div>
         
         <ng-template #createState>
-            <app-edit-toggle [isInUpdateState]=true [link]="constants.getRoutePath(router, 'diaryentry-overview')"></app-edit-toggle>
+            <app-edit-toggle [isInUpdateState]=true [link]="routingService.getRoutePath('diaryentry-overview')"></app-edit-toggle>
             <h2 class="text-center">
                 Creating a new Diaryentry
             </h2>
