--- a/src/app/components/articles/organization-article-update/organization-article-update.component.html
+++ b/src/app/components/articles/organization-article-update/organization-article-update.component.html
@@ -2,13 +2,19 @@
     <article class="mb-5">
         <!-- Heading -->
         <div *ngIf="formState===constants.updateState && model; else createState">
-            <app-edit-toggle [isInUpdateState]=true [link]="'..'"></app-edit-toggle>
+            <app-edit-toggle 
+            [isInUpdateState]=true 
+            [link]="'..'"
+            ></app-edit-toggle>
 
             <h2 class="text-center"> Updating Organization {{ model.name }} </h2>
         </div>
         
         <ng-template #createState>
-            <app-edit-toggle [isInUpdateState]=true [link]="constants.getRoutePath(router, 'organization-overview')"></app-edit-toggle>
+            <app-edit-toggle 
+            [isInUpdateState]=true 
+            [link]="routingService.getRoutePath('organization-overview')"
+            ></app-edit-toggle>
 
             <h2 class="text-center"> Creating a new Organization </h2>
         </ng-template>
