--- a/src/app/components/articles/recently-updated-article/recently-updated-article.component.html
+++ b/src/app/components/articles/recently-updated-article/recently-updated-article.component.html
@@ -15,7 +15,7 @@
 
             <!-- Article List For Date -->
             <a 
-            routerLink="{{article.getAbsoluteRouterUrl()}}" 
+            routerLink="{{ article.getAbsoluteRouterUrl() }}" 
             *ngFor="let article of articleGroup.value"
             [ngClass]="'card flex-row align-items-center py-2 row sidebar-border ' + sidebarColor(article.article_type)"
             >
@@ -37,11 +37,12 @@
         <div class="row">
             <div 
             class="btn btn-secondary col-md-3" 
-            routerLink="{{constants.getRoutePath(router, 'home1')}}"
+            routerLink="{{routingService.getRoutePath('home1')}}"
             >
                 Back To Frontpage
             </div>
         </div>
+        
     </article>
     <ng-template #loading class="mb-4"> <app-spinner></app-spinner> </ng-template> 
 </div>
