--- a/src/app/components/articles/item-article/item-article.component.html
+++ b/src/app/components/articles/item-article/item-article.component.html
@@ -13,7 +13,7 @@
         <div class="row">
             <p *ngIf="item.owner_details" class="text-center col mb-5"> 
                 Owned by: 
-                <a routerLink="{{ constants.getRoutePath(router, 'character', {name: item.owner_details.name}) }}">
+                <a routerLink="{{ routingService.getRoutePath('character', {name: item.owner_details.name}) }}">
                     {{ item.owner_details.name }}
                 </a>
             </p>
@@ -39,7 +39,7 @@
         <!-- Footer (Move to other Article + Delete Article) -->
         <app-article-footer
         (delete)="deleteArticle()"
-        [link]="constants.getRoutePath(router, 'item-overview')"
+        [link]="routingService.getRoutePath('item-overview')"
         [label]="'Back to Items'"
         [deleteMessage]="'Delete '+item.name+'?'"
         ></app-article-footer>
