--- a/src/app/components/articles/map-update/map-update.component.html
+++ b/src/app/components/articles/map-update/map-update.component.html
@@ -2,13 +2,19 @@
     <article class="mb-5">
         <!-- Heading -->
         <div *ngIf="formState===constants.updateState && model; else createState">
-            <app-edit-toggle [isInUpdateState]=true [link]="constants.getRoutePath(router, 'map', {name: model.name})"></app-edit-toggle>
+            <app-edit-toggle
+            [isInUpdateState]=true 
+            [link]="routingService.getRoutePath('map', {name: model.name})"
+            ></app-edit-toggle>
 
             <h2 class="text-center"> Updating Map {{ model.name }} </h2>
         </div>
         
         <ng-template #createState>
-            <app-edit-toggle [isInUpdateState]=true [link]="constants.getRoutePath(router, 'map', {name: constants.defaultMapName})"></app-edit-toggle>
+            <app-edit-toggle 
+            [isInUpdateState]=true 
+            [link]="routingService.getRoutePath('map', {name: constants.defaultMapName})"
+            ></app-edit-toggle>
 
             <h2 class="text-center"> Adding a new Map </h2>
         </ng-template>
