--- a/src/app/components/articles/marker/marker.component.html
+++ b/src/app/components/articles/marker/marker.component.html
@@ -25,6 +25,7 @@
             <span class="col-3">{{marker.latitude}}</span>
             <div class="col-2"></div>
         </div>
+
         <!-- Icon -->
         <div class="row">
             <div class="col-4"></div>
@@ -32,6 +33,7 @@
             {{marker.icon}}
             <div class="col-2"></div>
         </div>
+
         <!-- Color -->
         <div class="row">
             <div class="col-4"></div>
@@ -46,7 +48,11 @@
         <!-- Footer (Move to other Article + Delete Article) -->
         <app-article-footer
         (delete)="deleteMarker()"
-        [link]="constants.getRoutePath(router, 'location', {parent_name: marker.location_details.parent_location_name, name: marker.location_details.name})"
+        [link]="routingService.getRoutePath('location', {
+                parent_name: marker.location_details.parent_location_name, 
+                name: marker.location_details.name
+            }
+        )"
         [label]="'Back to '+marker.location_details.name"
         [deleteMessage]="'Delete Marker?'"
         ></app-article-footer>
