--- a/src/app/components/articles/rules/rules.component.html
+++ b/src/app/components/articles/rules/rules.component.html
@@ -1,5 +1,6 @@
 <div class="main">
     <article *ngIf="rules; else loading" class="container">
+
         <!-- Heading -->
         <div class="row">
             <h1 class="text-center col">Rules</h1>
@@ -7,11 +8,13 @@
 
         <!-- Rules -->
         <div *ngFor="let rule of rules; let i = index" class="card row mb-3 px-4 pt-3 pb-1">
+
             <!-- Rules Panel Heading -->
             <h5 class="pointer col-12 justify-content-between d-flex align-items-center" (click)="togglePanel(i)"> 
                 <span>{{ rule.name }}</span>
                 <i [ngClass]="{'fa icon float-right': true, 'fa-plus': panelIsOpen(i), 'fa-minus': !panelIsOpen(i)}"></i>
             </h5>
+
             <!-- Rules Panel Content -->
             <div class="col-12" [ngbCollapse]="panelIsOpen(i)">
                 <hr class="white-separator">
@@ -21,7 +24,7 @@
 
         <!-- Button to Frontpage -->
         <div class="row mt-5">
-            <div class="btn btn-secondary col-md-3" routerLink="{{constants.getRoutePath(router, 'home1')}}">
+            <div class="btn btn-secondary col-md-3" routerLink="{{ routingService.getRoutePath('home1') }}">
                 Back To Frontpage
             </div>
         </div>
