--- a/src/app/components/articles/session-audio-update/session-audio-update.component.html
+++ b/src/app/components/articles/session-audio-update/session-audio-update.component.html
@@ -2,7 +2,10 @@
     <article class="mb-5">
         <!-- Heading -->
         <div *ngIf="formState===constants.updateState && model; else createState">
-            <app-edit-toggle [isInUpdateState]=true [link]="'..'"></app-edit-toggle>
+            <app-edit-toggle 
+            [isInUpdateState]=true 
+            [link]="'..'"
+            ></app-edit-toggle>
 
             <h2 class="text-center">
                 Updating SessionAudio {{ model.session_details.name }}
@@ -10,7 +13,10 @@
         </div>
 
         <ng-template #createState>
-            <app-edit-toggle [isInUpdateState]=true [link]="constants.getRoutePath(router, 'sessionaudio-overview')"></app-edit-toggle>
+            <app-edit-toggle 
+            [isInUpdateState]=true 
+            [link]="routingService.getRoutePath('sessionaudio-overview')"
+            ></app-edit-toggle>
 
             <h2 class="text-center">
                 Uploading Session Audio File
