--- a/src/app/components/gateway-timeout/gateway-timeout.component.html
+++ b/src/app/components/gateway-timeout/gateway-timeout.component.html
@@ -1,6 +1,6 @@
 <div class="main d-flex flex-column">
     <h1 class="text-center mb-5"> HTTP 504: Gateway Timeout </h1>
-    <img src="{{constants.wikiStaticUrl}}/wiki/images/504.jpeg" alt="" class="center mb-3"/>
+    <img src="{{constants.timeoutImageUrl}}" alt="" class="center mb-3"/>
 
     <p class="text-center"> 
         Your connection seems to be taking a short rest. <br> 
@@ -9,7 +9,7 @@
     </p>
     
     <div>
-        <a class="btn btn-secondary" routerLink="{{constants.getRoutePath(router, 'home1')}}"> 
+        <a class="btn btn-secondary" routerLink="{{routingService.getRoutePath('home1')}}"> 
             Back To Frontpage 
         </a>
     </div>
