--- a/src/app/components/utility/location-accordion/location-accordion.component.html
+++ b/src/app/components/utility/location-accordion/location-accordion.component.html
@@ -6,7 +6,7 @@
         <ng-template ngbPanelTitle class="button-container">
             <span class="location-title"> 
                 <a 
-                routerLink="{{constants.getRoutePath(router, 'location', {
+                routerLink="{{routingService.getRoutePath('location', {
                         name: location.name, 
                         parent_name: location.parent_location_details.name
                     })
@@ -27,14 +27,14 @@
                 [heading]="location.name"
                 (updateText)="onSublocationUpdate($event, i)"
                 ></app-textfield>
-            </div> 
+            </div>
 
             <!-- List of Characters at this location -->
             <div class="location-character mb-1" *ngIf="location.characters.length > 0">
                 <span class="mr-4"> Characters: </span>
                 <span class="d-inline-flex align-items-center flex-wrap">
                     <span class="badge badge-secondary mr-2 p-1 mb-1" *ngFor="let character of location.characters">
-                        <a routerLink="{{constants.getRoutePath(router, 'character', {name: character.name}) }}">
+                        <a routerLink="{{routingService.getRoutePath('character', {name: character.name}) }}">
                             {{ character.name }}
                         </a>
                     </span>
