Fixed audio controls not working after adding timestamp

--- a/src/app/components/articles/session-audio/session-audio.component.html
+++ b/src/app/components/articles/session-audio/session-audio.component.html
@@ -76,6 +76,7 @@
             [sessionAudio]="sessionAudio"
             [vimePlayer]="vimePlayer"
             [createTimestampEventSubject]="createTimestampEventSubject"
+            (create)="toggleTimestampCreateState()"
             ></app-timestamp-list>
         </div>
 
