Second fix for buggy player controls during timestamp creation

--- a/src/app/components/articles/session-audio/session-audio.component.html
+++ b/src/app/components/articles/session-audio/session-audio.component.html
@@ -76,7 +76,7 @@
             [sessionAudio]="sessionAudio"
             [vimePlayer]="vimePlayer"
             [createTimestampEventSubject]="createTimestampEventSubject"
-            (create)="toggleTimestampCreateState()"
+            (timestampCreate)="toggleTimestampCreateState()"
             ></app-timestamp-list>
         </div>
 
